Release 0.1.5 - (not released yet)

* [fixed] Keep changed password after update fluentd-ui gem.
* [fixed] Add missing LICENSE file (Apache license 2.0)

Release 0.1.4 - 2014/08/20

* [fixed] Fix can't setting in_tail with format regexp.

Release 0.1.3 - 2014/08/13

* [feature] Add out_elasticsearch setting

Release 0.1.2 - 2014/08/07

* [fixed] Can't login if password changed from default

Release 0.1.1 - 2014/08/07

* [fixed] Can't install a gem on some environment #70
* [fixed] Can't setup in_tail if recognized as binary file selected #71

Release 0.1.0 - 2014/08/01

* First release!