@@ -27,7 +27,6 @@ Gem::Specification.new do |spec|
   spec.add_dependency "fluentd", "~> 0.10.51"
   spec.add_dependency 'rails', '4.1.4'
   spec.add_dependency 'sucker_punch', "~> 1.0.5"
-  spec.add_dependency 'bcrypt', '~> 3.1.5'
   spec.add_dependency 'addressable'
   spec.add_dependency "font-awesome-rails"
   spec.add_dependency 'sass-rails', '~> 4.0.3'
